upload some image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     let resultMsg = getResult('Bat', computerChoice);
     showResult('Bat', computerChoice, resultMsg);
   ">
-    <img src="image/bat.png" alt="Bat">
+    <img src="images/bat.png" alt="Bat">
   </button>
 
   <button onclick="
@@ -26,7 +26,7 @@
     resultMsg = getResult('Ball', computerChoice);
     showResult('Ball', computerChoice, resultMsg);
   ">
-    <img src="image/ball1.png" alt="Ball">
+    <img src="images/ball1.png" alt="Ball">
   </button>
 
   <button onclick="
@@ -34,7 +34,7 @@
     resultMsg = getResult('Stump', computerChoice);
     showResult('Stump', computerChoice, resultMsg);
   ">
-    <img src="image/stump.png" alt="Stump">
+    <img src="images/stump.png" alt="Stump">
   </button>
 
   <!-- Game Results -->
